--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(covmat)
 export(departure)
 export(enfa)
 export(global_sigma)
+export(sensitivity_map)
 exportClasses(GLcnfa)
 exportClasses(cnfa)
 exportClasses(enfa)
