Successful dev check with no warnings.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,8 @@ exportClasses(GLcenfa)
 exportClasses(cnfa)
 exportClasses(enfa)
 exportMethods(raster)
-importFrom(doSNOW,registerDoSNOW)
-importFrom(foreach,"%dopar%")
-importFrom(foreach,foreach)
+importFrom(pbapply,pboptions)
+importFrom(pbapply,pbsapply)
 importFrom(raster,blockSize)
 importFrom(raster,brick)
 importFrom(raster,canProcessInMemory)
@@ -38,14 +37,8 @@ importFrom(raster,writeRaster)
 importFrom(raster,writeStart)
 importFrom(raster,writeStop)
 importFrom(raster,writeValues)
-importFrom(snow,clusterExport)
-importFrom(snow,makeCluster)
-importFrom(snow,stopCluster)
 importFrom(sp,CRS)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,SpatialPolygonsDataFrame)
 importFrom(sp,identicalCRS)
 importFrom(stats,cov)
-importFrom(stats,na.omit)
-importFrom(utils,setTxtProgressBar)
-importFrom(utils,txtProgressBar)
