--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,14 +5,17 @@ Version: 0.1
 Date: 2016-09-10
 Author: D. Scott Rinnan
 Maintainer: Who to complain to <rinnan@uw.edu>
-Description: More about what it does (maybe more than one line)
+Description: Performs climate- and ecological-niche factor analysis of spatial data. Processing of large files and parallelization is supported.
 Depends: 
+        methods,
+        R (>= 3.0.0),
         foreach,
 	raster,
         sp,
 	doSNOW (>= 1.0.14),
-	pbapply,
         snow
-License: What license is it under?
+Imports:
+        pbapply    
+License: GPL (>= 3)
 LazyData: TRUE
 RoxygenNote: 6.0.1
