--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,35 +10,22 @@ exportClasses(GLcenfa)
 exportClasses(cnfa)
 exportClasses(enfa)
 exportMethods(raster)
+import(raster)
+import(sp)
 importFrom(pbapply,pboptions)
 importFrom(pbapply,pbsapply)
 importFrom(raster,blockSize)
-importFrom(raster,brick)
-importFrom(raster,canProcessInMemory)
-importFrom(raster,cellStats)
-importFrom(raster,crop)
 importFrom(raster,extension)
-importFrom(raster,extent)
 importFrom(raster,filename)
 importFrom(raster,getValues)
-importFrom(raster,mask)
 importFrom(raster,ncell)
-importFrom(raster,nlayers)
 importFrom(raster,pbClose)
 importFrom(raster,pbCreate)
 importFrom(raster,pbStep)
 importFrom(raster,raster)
-importFrom(raster,rasterTmpFile)
-importFrom(raster,rasterize)
 importFrom(raster,setValues)
-importFrom(raster,trim)
-importFrom(raster,values)
 importFrom(raster,writeRaster)
 importFrom(raster,writeStart)
 importFrom(raster,writeStop)
 importFrom(raster,writeValues)
-importFrom(sp,CRS)
-importFrom(sp,SpatialPointsDataFrame)
-importFrom(sp,SpatialPolygonsDataFrame)
-importFrom(sp,identicalCRS)
 importFrom(stats,cov)
