--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,13 +9,18 @@ Description: Performs climate- and ecological-niche factor analysis of spatial d
 Depends: 
         R (>= 3.0.0),
 	raster,
-        sp
+        sp,
+        snow
 Imports:
         pbapply, 
         methods,
-        snow,
         doSNOW (>= 1.0.14),
-        foreach
+        foreach,
+        graphics,
+        grDevices,
+        magrittr,
+        Rcpp
+LinkingTo: Rcpp
 License: GPL (>= 3)
 LazyData: TRUE
 RoxygenNote: 6.0.1
