--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cnfa)
 export(covmat)
 export(departure)
 export(enfa)
+export(mf)
 export(sensitivity_map)
 exportClasses(GLcenfa)
 exportClasses(cnfa)
