Updated summary methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(graphics,legend)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(magrittr,"%>%")
+importFrom(methods,as)
 importFrom(pbapply,pboptions)
 importFrom(pbapply,pbsapply)
 importFrom(snow,clusterExport)
