Methods for accessing S4 slots.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,12 @@ export(cnfa)
 export(covmat)
 export(departure)
 export(enfa)
-export(mf)
+export(m.factor)
+export(marginality)
+export(s.factor)
+export(sensitivity)
 export(sensitivity_map)
+export(specialization)
 exportClasses(GLcenfa)
 exportClasses(cnfa)
 exportClasses(enfa)
