Updated departure methods. Added new examples.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(sensitivity_map)
 export(specialization)
 exportClasses(GLcenfa)
 exportClasses(cnfa)
+exportClasses(departure)
 exportClasses(enfa)
 exportMethods(raster)
 import(raster)
@@ -30,6 +31,7 @@ importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(magrittr,"%>%")
 importFrom(methods,as)
+importFrom(parallel,detectCores)
 importFrom(pbapply,pboptions)
 importFrom(pbapply,pbsapply)
 importFrom(snow,clusterExport)
