--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,17 +6,22 @@ export(cnfa)
 export(covmat)
 export(departure)
 export(enfa)
+export(exposure_map)
 export(m.factor)
 export(marginality)
 export(s.factor)
 export(sensitivity)
 export(sensitivity_map)
 export(specialization)
+export(vulnerability)
+export(vulnerability_map)
 exportClasses(GLcenfa)
 exportClasses(cnfa)
 exportClasses(departure)
 exportClasses(enfa)
+exportClasses(vulnerability)
 exportMethods(raster)
+import(methods)
 import(raster)
 import(sp)
 importFrom(Rcpp,sourceCpp)
