Added biplot class dependencies.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,3 +29,30 @@ RoxygenNote: 6.0.1
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
+Collate: 
+    'GLcenfa-class.R'
+    'GLcenfa.R'
+    'RcppExports.R'
+    'enfa-class.R'
+    'cnfa-class.R'
+    'biplot.R'
+    'brStick.R'
+    'calc.R'
+    'climdat.fut.R'
+    'climdat.hist.R'
+    'cnfa.R'
+    'covij.R'
+    'covmat.R'
+    'departure-class.R'
+    'departure.R'
+    'enfa.R'
+    'exposure_map.R'
+    'init.R'
+    'raster.R'
+    'scale.R'
+    'sensitivity_map.R'
+    'slots.R'
+    'tree-data.R'
+    'vulnerability-class.R'
+    'vulnerability.R'
+    'vulnerability_map.R'
