--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ exportClasses(cnfa)
 exportClasses(departure)
 exportClasses(enfa)
 exportClasses(vulnerability)
+exportMethods(covmat)
 exportMethods(raster)
 import(raster)
 import(sp)
