--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,9 @@ Collate:
     'covij.R'
     'covmat.R'
     'departure-class.R'
+    'difRasterBrick-class.R'
     'departure.R'
+    'difRaster.R'
     'enfa.R'
     'exposure_map.R'
     'raster.R'
