--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(vulnerability_map)
 exportClasses(GLcenfa)
 exportClasses(cnfa)
 exportClasses(departure)
+exportClasses(difRasterBrick)
 exportClasses(enfa)
 exportClasses(vulnerability)
 exportMethods(covmat)
