--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(brStick)
 export(cnfa)
 export(covmat)
 export(departure)
+export(difRaster)
 export(enfa)
 export(exposure_map)
 export(m.factor)
