--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,15 +43,15 @@ Collate:
     'climdat.hist.R'
     'cnfa.R'
     'covij.R'
-    'covmat.R'
     'departure-class.R'
     'difRasterBrick-class.R'
     'departure.R'
     'difRaster.R'
     'enfa.R'
     'exposure_map.R'
+    'parCov.R'
+    'parScale.R'
     'raster.R'
-    'scale.R'
     'sensitivity_map.R'
     'slots.R'
     'tree-data.R'
