--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,14 @@
 
 S3method(biplot,cnfa)
 S3method(biplot,enfa)
-S3method(cov,GLcenfa)
-S3method(cov,cnfa)
-S3method(cov,enfa)
 export()
 export(GLcenfa)
 export(biplot)
 export(brStick)
 export(cnfa)
+export(cov.GLcenfa)
+export(cov.cnfa)
+export(cov.enfa)
 export(departure)
 export(difRaster)
 export(enfa)
@@ -30,7 +30,6 @@ exportClasses(departure)
 exportClasses(difRasterBrick)
 exportClasses(enfa)
 exportClasses(vulnerability)
-exportMethods(raster)
 import(raster)
 import(sp)
 importFrom(Rcpp,sourceCpp)
