--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,8 @@ Collate:
     'CENFA.R'
     'GLcenfa-class.R'
     'GLcenfa.R'
+    'GLdeparture-class.R'
+    'GLdeparture.R'
     'RcppExports.R'
     'enfa-class.R'
     'cnfa-class.R'
@@ -45,7 +47,6 @@ Collate:
     'covij.R'
     'departure-class.R'
     'departure.R'
-    'difRaster.R'
     'enfa.R'
     'exposure_map.R'
     'parCov.R'
