--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(biplot,cnfa)
 S3method(biplot,enfa)
 export()
 export(GLcenfa)
+export(GLdeparture)
 export(biplot)
 export(brStick)
 export(cnfa)
@@ -11,7 +12,6 @@ export(cov.GLcenfa)
 export(cov.cnfa)
 export(cov.enfa)
 export(departure)
-export(difRaster)
 export(enfa)
 export(exposure_map)
 export(m.factor)
@@ -25,6 +25,7 @@ export(specialization)
 export(vulnerability)
 export(vulnerability_map)
 exportClasses(GLcenfa)
+exportClasses(GLdeparture)
 exportClasses(cnfa)
 exportClasses(departure)
 exportClasses(enfa)
