Updated map README.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(departure)
 export(enfa)
 export(exposure_map)
 export(m.factor)
+export(map)
 export(marginality)
 export(parCov)
 export(parScale)
