on.exit(closeAllConnections()) for parCov and parScale .

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ import(sp)
 importFrom(Rcpp,sourceCpp)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(foreach,"%dopar%")
+importFrom(foreach,'%dopar%')
 importFrom(foreach,foreach)
 importFrom(grDevices,chull)
 importFrom(graphics,abline)
