--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports:
         graphics,
         grDevices,
         magrittr,
-        Rcpp,
+        Rcpp (>= 0.12.14),
         sf,
         snow,
         devtools
@@ -27,7 +27,8 @@ License: GPL (>= 3)
 LazyData: TRUE
 RoxygenNote: 6.0.1
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    doSNOW (>= 1.0.14),
 VignetteBuilder: knitr
 Collate: 
     'CENFA.R'
