--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,7 @@ License: GPL (>= 3)
 LazyData: TRUE
 RoxygenNote: 6.0.1
 Suggests: knitr,
-    rmarkdown,
-    doSNOW (>= 1.0.14),
+    rmarkdown
 VignetteBuilder: knitr
 Collate: 
     'CENFA.R'
