--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ exportClasses(cnfa)
 exportClasses(departure)
 exportClasses(enfa)
 exportClasses(vulnerability)
+exportMethods(departure)
 import(raster)
 import(sp)
 importFrom(Rcpp,sourceCpp)
