Removed sf compatibility.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,7 @@ License: GPL (>= 3)
 LazyData: TRUE
 RoxygenNote: 6.0.1
 Suggests: knitr,
-    rmarkdown,
-    sf
+    rmarkdown
 VignetteBuilder: knitr
 Collate: 
     'CENFA.R'
