--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,10 +29,14 @@ exportClasses(cnfa)
 exportClasses(departure)
 exportClasses(enfa)
 exportClasses(vulnerability)
-import(raster)
-import(sp)
+importClassesFrom(raster,RasterBrick)
+importClassesFrom(raster,RasterLayer)
+importClassesFrom(raster,RasterStack)
+importClassesFrom(sp,SpatialPoints)
+importClassesFrom(sp,SpatialPointsDataFrame)
+importClassesFrom(sp,SpatialPolygons)
+importClassesFrom(sp,SpatialPolygonsDataFrame)
 importFrom(Rcpp,sourceCpp)
-importFrom(doSNOW,registerDoSNOW)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,'%dopar%')
 importFrom(foreach,foreach)
@@ -43,18 +47,53 @@ importFrom(graphics,legend)
 importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
+importFrom(graphics,text)
 importFrom(magrittr,"%>%")
+importFrom(methods,.hasSlot)
 importFrom(methods,as)
 importFrom(parallel,detectCores)
 importFrom(pbapply,pboptions)
 importFrom(pbapply,pbsapply)
-importFrom(snow,clusterExport)
-importFrom(snow,makeCluster)
-importFrom(snow,stopCluster)
+importFrom(raster,"values<-")
+importFrom(raster,beginCluster)
+importFrom(raster,blockSize)
+importFrom(raster,brick)
+importFrom(raster,calc)
+importFrom(raster,canProcessInMemory)
+importFrom(raster,cellStats)
+importFrom(raster,clusterR)
+importFrom(raster,compareRaster)
+importFrom(raster,crop)
+importFrom(raster,endCluster)
+importFrom(raster,extension)
+importFrom(raster,extent)
+importFrom(raster,filename)
+importFrom(raster,getValues)
+importFrom(raster,intersect)
+importFrom(raster,mask)
+importFrom(raster,nlayers)
+importFrom(raster,overlay)
+importFrom(raster,pbClose)
+importFrom(raster,pbCreate)
+importFrom(raster,pbStep)
+importFrom(raster,quantile)
+importFrom(raster,rasterTmpFile)
+importFrom(raster,rasterize)
+importFrom(raster,setValues)
+importFrom(raster,trim)
+importFrom(raster,values)
+importFrom(raster,writeRaster)
+importFrom(raster,writeStart)
+importFrom(raster,writeStop)
+importFrom(raster,writeValues)
+importFrom(sp,identicalCRS)
 importFrom(stats,cov)
 importFrom(stats,ecdf)
 importFrom(stats,na.omit)
 importFrom(stats,sd)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
+importMethodsFrom(raster,"[")
+importMethodsFrom(raster,plot)
+importMethodsFrom(raster,raster)
 useDynLib(CENFA)
