Changed 'map' to 'stretchPlot'.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,6 @@ Collate:
     'departure.R'
     'enfa-class.R'
     'enfa.R'
-    'map.R'
     'exposure_map.R'
     'names.R'
     'parCov.R'
@@ -56,6 +55,7 @@ Collate:
     'scatter.R'
     'sensitivity_map.R'
     'slots.R'
+    'stretchPlot.R'
     'tree-data.R'
     'vulnerability-class.R'
     'vulnerability.R'
