--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(departure)
 export(enfa)
 export(exposure_map)
 export(m.factor)
-export(map)
 export(marginality)
 export(parCov)
 export(parScale)
@@ -21,6 +20,7 @@ export(scatter)
 export(sensitivity)
 export(sensitivity_map)
 export(specialization)
+export(stretchPlot)
 export(vulnerability)
 export(vulnerability_map)
 exportClasses(GLcenfa)
