--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,13 +9,13 @@ Description: Tools for climate- and ecological-niche factor analysis of spatial 
 Depends:
         R (>= 3.0.0)
 Imports:
-        devtools,
         doSNOW (>= 1.0.16),
         foreach (>= 1.4.4),
         graphics,
         grDevices,
         magrittr,
         methods,
+        parallel (>= 3.3.3),
         pbapply (>= 1.3.3), 
 	raster (>= 2.6.7),
         Rcpp (>= 0.12.14),
