--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(sp,SpatialPolygons)
 importClassesFrom(sp,SpatialPolygonsDataFrame)
 importFrom(Rcpp,sourceCpp)
+importFrom(doSNOW,registerDoSNOW)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,'%dopar%')
 importFrom(foreach,foreach)
@@ -86,6 +87,8 @@ importFrom(raster,writeRaster)
 importFrom(raster,writeStart)
 importFrom(raster,writeStop)
 importFrom(raster,writeValues)
+importFrom(snow,clusterExport)
+importFrom(snow,makeCluster)
 importFrom(sp,identicalCRS)
 importFrom(stats,cov)
 importFrom(stats,ecdf)
