--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,11 @@ Version: 0.1.0
 Date: 2018-1-26
 Author: D. Scott Rinnan
 Maintainer: D. Scott Rinnan <rinnan@u.washington.edu>
-Description: Tools for climate- and ecological-niche factor analysis of spatial data, including methods for visualization of spatial variability of species sensitivity, exposure, and vulnerability to climate change. Processing of large files and parallel methods are supported.
+Description: Tools for climate- and ecological-niche factor analysis of spatial data, including methods for visualization of spatial variability of species sensitivity, exposure, and vulnerability to climate change. Processing of large files and parallel methods are supported. Ecological-niche factor analysis is described in Hirzel et al. (2002) <doi:10.2307/3071784> and Basille et al. (2008) <doi:10.1016/j.ecolmodel.2007.09.006>.
 Depends:
         R (>= 3.0.0)
 Imports:
-        doSNOW (>= 1.0.16),
+        doParallel (>= 1.0.11),
         foreach (>= 1.4.4),
         graphics,
         grDevices,
@@ -19,7 +19,6 @@ Imports:
         pbapply (>= 1.3.3), 
 	raster (>= 2.6.7),
         Rcpp (>= 0.12.14),
-        snow (>= 0.4.2),
         sp (>= 1.2.7)
 LinkingTo: Rcpp
 License: GPL (>= 3)
