--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(sp,SpatialPolygons)
 importClassesFrom(sp,SpatialPolygonsDataFrame)
 importFrom(Rcpp,sourceCpp)
-importFrom(doParallel,registerDoParallel)
+importFrom(doSNOW,registerDoSNOW)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,'%dopar%')
 importFrom(foreach,foreach)
@@ -52,10 +52,7 @@ importFrom(graphics,text)
 importFrom(magrittr,"%>%")
 importFrom(methods,.hasSlot)
 importFrom(methods,as)
-importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
-importFrom(parallel,makeCluster)
-importFrom(parallel,stopCluster)
 importFrom(pbapply,pboptions)
 importFrom(pbapply,pbsapply)
 importFrom(raster,"values<-")
@@ -90,6 +87,8 @@ importFrom(raster,writeRaster)
 importFrom(raster,writeStart)
 importFrom(raster,writeStop)
 importFrom(raster,writeValues)
+importFrom(snow,clusterExport)
+importFrom(snow,makeCluster)
 importFrom(sp,identicalCRS)
 importFrom(stats,cov)
 importFrom(stats,ecdf)
