Fixed missing `parScale` export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ importFrom(raster,quantile)
 importFrom(raster,rasterTmpFile)
 importFrom(raster,rasterize)
 importFrom(raster,setValues)
+importFrom(raster,subset)
 importFrom(raster,trim)
 importFrom(raster,values)
 importFrom(raster,writeRaster)
