--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ exportClasses(cnfa)
 exportClasses(departure)
 exportClasses(enfa)
 exportClasses(vulnerability)
+exportMethods(predict)
 importClassesFrom(raster,RasterBrick)
 importClassesFrom(raster,RasterLayer)
 importClassesFrom(raster,RasterStack)
@@ -52,6 +53,7 @@ importFrom(graphics,text)
 importFrom(magrittr,"%>%")
 importFrom(methods,.hasSlot)
 importFrom(methods,as)
+importFrom(methods,is)
 importFrom(parallel,detectCores)
 importFrom(pbapply,pboptions)
 importFrom(pbapply,pbsapply)
@@ -81,6 +83,7 @@ importFrom(raster,quantile)
 importFrom(raster,rasterTmpFile)
 importFrom(raster,rasterize)
 importFrom(raster,setValues)
+importFrom(raster,stack)
 importFrom(raster,subset)
 importFrom(raster,trim)
 importFrom(raster,values)
