New function for comparing ENFA methods.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,8 +48,10 @@ Collate:
     'departure.R'
     'enfa-class.R'
     'enfa.R'
+    'enfa2.R'
     'exposure_map.R'
     'names.R'
+    'overlay.R'
     'parCov.R'
     'parScale.R'
     'vulnerability-class.R'
