--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(cov.cnfa)
 export(cov.enfa)
 export(departure)
 export(enfa)
+export(enfa2)
 export(exposure_map)
 export(m.factor)
 export(marginality)
@@ -69,10 +70,12 @@ importFrom(raster,crop)
 importFrom(raster,endCluster)
 importFrom(raster,extension)
 importFrom(raster,extent)
+importFrom(raster,extract)
 importFrom(raster,filename)
 importFrom(raster,getValues)
 importFrom(raster,intersect)
 importFrom(raster,mask)
+importFrom(raster,ncell)
 importFrom(raster,nlayers)
 importFrom(raster,overlay)
 importFrom(raster,pbClose)
