--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,7 @@ exportClasses(cnfa)
 exportClasses(departure)
 exportClasses(enfa)
 exportClasses(vulnerability)
-importClassesFrom(raster,RasterBrick)
+import(raster)
 importClassesFrom(raster,RasterLayer)
 importClassesFrom(raster,RasterStack)
 importClassesFrom(sp,SpatialPoints)
@@ -48,7 +48,6 @@ importFrom(graphics,legend)
 importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
-importFrom(graphics,text)
 importFrom(magrittr,"%>%")
 importFrom(methods,.hasSlot)
 importFrom(methods,as)
@@ -56,7 +55,6 @@ importFrom(methods,is)
 importFrom(parallel,detectCores)
 importFrom(pbapply,pboptions)
 importFrom(pbapply,pbsapply)
-importFrom(raster,"values<-")
 importFrom(raster,beginCluster)
 importFrom(raster,blockSize)
 importFrom(raster,brick)
@@ -67,27 +65,19 @@ importFrom(raster,clusterR)
 importFrom(raster,compareRaster)
 importFrom(raster,crop)
 importFrom(raster,endCluster)
-importFrom(raster,extension)
-importFrom(raster,extent)
 importFrom(raster,extract)
-importFrom(raster,filename)
 importFrom(raster,getValues)
-importFrom(raster,intersect)
-importFrom(raster,mask)
 importFrom(raster,ncell)
 importFrom(raster,nlayers)
 importFrom(raster,overlay)
 importFrom(raster,pbClose)
 importFrom(raster,pbCreate)
 importFrom(raster,pbStep)
-importFrom(raster,quantile)
-importFrom(raster,rasterTmpFile)
 importFrom(raster,rasterize)
 importFrom(raster,setValues)
 importFrom(raster,stack)
 importFrom(raster,subset)
 importFrom(raster,trim)
-importFrom(raster,values)
 importFrom(raster,writeRaster)
 importFrom(raster,writeStart)
 importFrom(raster,writeStop)
