--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(magrittr,"%>%")
+importFrom(methods,.hasSlot)
 importFrom(methods,as)
 importFrom(methods,is)
 importFrom(parallel,detectCores)
