--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,7 +1,9 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^README\.Rmd$
+^README\.md$
 ^NEWS\.Rmd$
+^NEWS\.md$
 ^README-.*\.png$
 ^\.travis\.yml$
 ^cran-comments\.md$
