--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,17 +10,17 @@ Depends:
         R (>= 3.5.0),
 	      raster (>= 2.6.7)
 Imports:
-        doSNOW (>= 1.0.16),
-        foreach (>= 1.4.4),
-        graphics,
-        grDevices,
-        magrittr,
-        methods,
-        parallel (>= 3.3.3),
-        pbapply (>= 1.3.3), 
-        Rcpp (>= 0.12.14),
-        snow (>= 0.4.2),
-        sp (>= 1.2.7)
+    doSNOW (>= 1.0.16),
+    foreach (>= 1.4.4),
+    graphics,
+    grDevices,
+    magrittr,
+    methods,
+    parallel (>= 3.3.3),
+    pbapply (>= 1.3.3),
+    Rcpp,
+    snow (>= 0.4.2),
+    sp (>= 1.2.7)
 LinkingTo: Rcpp
 License: GPL (>= 3)
 LazyData: TRUE
